--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="main">
         <div class="left">
-            <img src="./img/undraw_doctor_kw-5-l.svg" alt="" class="image">
+            <img src="./undraw_doctor_kw-5-l.svg" alt="" class="image">
         </div>
         <div class="right">
             <div class="personal">
